// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle default exported es module functions 1`] = `
"declare class Action {}
declare class RouterState {}
declare export default function routerReducer(
  state?: RouterState,
  action?: Action
): RouterState;
"
`;

exports[`should handle exported es module functions 1`] = `
"declare class Action {}
declare class RouterState {}
declare class Store<T> {}
declare class SyncHistoryWithStoreOptions {}
declare class HistoryUnsubscribe {}
declare export function routerReducer(
  state?: RouterState,
  action?: Action
): RouterState;
declare export function syncHistoryWithStore(
  history: History,
  store: Store<any>,
  options?: SyncHistoryWithStoreOptions
): History & HistoryUnsubscribe;
"
`;

exports[`should handle function overload es module functions 1`] = `
"declare class Action {}
declare class RouterState {}
declare export function routerReducer(
  state?: RouterState,
  action?: Action
): RouterState;
declare export function routerReducer(state?: RouterState): RouterState;
"
`;

exports[`should handle toString function overload 1`] = `
"declare export function toString(): void;
declare export function toString(e: number): void;
declare export function toString(b: string): void;
"
`;

exports[`should keep default parameters in functions 1`] = `
"declare function addClickListener<T = Error>(onclick: (e: Event) => void): T;
"
`;

exports[`should keep this annotation in functions 1`] = `
"declare function addClickListener(
  onclick: (this: void, e: Event) => void
): void;
"
`;

exports[`should not break with Promise return types - issue 156 1`] = `
"declare export var fn: () => Promise<void>;
"
`;

exports[`should transform generic \`<T extends E>\` to \`<T: E>\` on functions 1`] = `
"declare function addClickListener<T: Error>(onclick: (e: Event) => void): T;
"
`;
